--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,13 @@
 [workspace]
 
-members = ["interpreter"
+members = [
+    "interpreter"
 ]
 
 resolver="2"
 
 [workspace.dependencies]
+anyhow = "1.0.97"
+clap = { version = "4.5.34", features = ["derive"] }
+tokio = { version = "1.44.1", features = ["full"]}
 interpreter = { path = "interpreter" }
