--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,8 @@ resolver="2"
 
 [workspace.dependencies]
 anyhow = "1.0.97"
+egg = "0.10.0"
 clap = { version = "4.5.34", features = ["derive"] }
+ordered-float = "3.9.2"
 tokio = { version = "1.44.1", features = ["full"]}
 interpreter = { path = "interpreter" }
