--- a/crates/prospero/Cargo.toml
+++ b/crates/prospero/Cargo.toml
@@ -7,5 +7,7 @@ edition = "2021"
 anyhow = { workspace = true }
 clap = { workspace = true }
 egg = { workspace = true }
+itertools = { workspace = true }
 ordered-float = { workspace = true }
+tempfile = { workspace = true }
 tokio = { workspace = true }
