--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ anyhow = "1.0.97"
 clap = { version = "4.5.34", features = ["derive"] }
 egg = "0.10.0"
 itertools = "0.14.0"
+log = "0.4.27"
 ordered-float = "3.9.2"
 rand = "0.9.0"
 simplelog = "0.12.2"
